--- a/index.html
+++ b/index.html
@@ -8,25 +8,39 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <img src="logo.png" alt="Logo" class="logo">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Categories</a></li>
-          <li><a href="#">Ideas</a></li>
-          <li><a href="#">Login</a></li>
-        </ul>
-      </nav>
-    </div>
+    <div class="logo">🎓 StudentHub</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Categories</a>
+      <a href="#">Share Ideas</a>
+      <a href="#">Requests</a>
+      <a href="#" class="btn-login">Login</a>
+    </nav>
   </header>
 
   <section class="hero">
-    <div class="container">
-      <h1>Welcome to Student Marketplace</h1>
-      <p>Buy, Sell & Share Creativity. All by Students. For Students.</p>
-      <a href="#" class="btn">Get Started</a>
+    <h1>Empower Students to Create, Sell & Connect</h1>
+    <p>Where innovation meets opportunity – totally free for all students.</p>
+    <a href="#" class="btn-green">Start Now</a>
+  </section>
+
+  <section class="grid">
+    <div class="card">
+      <h2>🛒 Buy & Sell</h2>
+      <p>List and discover books, clothes, digital services and more.</p>
+    </div>
+    <div class="card">
+      <h2>💡 Share Ideas</h2>
+      <p>Post your unique idea and attract investors or teammates.</p>
+    </div>
+    <div class="card">
+      <h2>🤝 Request Help</h2>
+      <p>Ask for collaboration, support, or solutions from other students.</p>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; 2025 StudentHub – Built for Students, by Students</p>
+  </footer>
 </body>
 </html>
