--- a/index.html
+++ b/index.html
@@ -44,3 +44,63 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>StudentHub Marketplace</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>StudentHub Marketplace</h1>
+    <input type="text" id="searchBar" placeholder="Search for items...">
+  </header>
+
+  <section id="filters">
+    <button class="filter-button">Books</button>
+    <button class="filter-button">Clothes</button>
+    <button class="filter-button">Electronics</button>
+    <button class="filter-button">Art</button>
+    <!-- More filters can be added -->
+  </section>
+
+  <main id="product-list">
+    <!-- Products will be displayed here -->
+  </main>
+
+  <footer>
+    <p>StudentHub © 2025</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>StudentHub | Marketplace</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="dark-theme">
+  <header>
+    <h1>📚 StudentHub Marketplace</h1>
+    <input type="text" id="searchBar" placeholder="Search items..." />
+    <select id="categoryFilter">
+      <option value="all">All Categories</option>
+      <option value="books">Books</option>
+      <option value="clothes">Clothes</option>
+      <option value="art">Art</option>
+      <option value="digital">Digital Skills</option>
+    </select>
+  </header>
+
+  <main id="productList" class="product-grid">
+    <!-- Products will be loaded here -->
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
