--- a/marketplace.html
+++ b/marketplace.html
@@ -1,61 +1,37 @@
-<!-- marketplace.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>StudentHub Marketplace</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <h1>StudentHub Marketplace</h1>
-    <input type="text" id="searchBar" placeholder="Search for items...">
+    <nav>
+      <button onclick="showForm()">Add Product</button>
+    </nav>
   </header>
 
-  <section id="filters">
-    <button class="filter-button">Books</button>
-    <button class="filter-button">Clothes</button>
-    <button class="filter-button">Electronics</button>
-    <button class="filter-button">Art</button>
-    <!-- More filters can be added -->
-  </section>
+  <main>
+    <section id="product-form-section" style="display:none;">
+      <form id="product-form">
+        <input type="text" id="title" placeholder="Product Title" required />
+        <textarea id="description" placeholder="Description" required></textarea>
+        <input type="text" id="price" placeholder="Price (৳)" required />
+        <button type="submit">Submit</button>
+      </form>
+    </section>
 
-  <main id="product-list">
-    <!-- Products will be displayed here -->
+    <section id="product-list"></section>
   </main>
 
   <footer>
-    <p>StudentHub © 2025</p>
+    <p>&copy; 2025 StudentHub</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StudentHub | Marketplace</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body class="dark-theme">
-  <header>
-    <h1>📚 StudentHub Marketplace</h1>
-    <input type="text" id="searchBar" placeholder="Search items..." />
-    <select id="categoryFilter">
-      <option value="all">All Categories</option>
-      <option value="books">Books</option>
-      <option value="clothes">Clothes</option>
-      <option value="art">Art</option>
-      <option value="digital">Digital Skills</option>
-    </select>
-  </header>
 
-  <main id="productList" class="product-grid">
-    <!-- Products will be loaded here -->
-  </main>
-
-  <script src="script.js"></script>
-</body>
-</html>
