--- a/marketplace.html
+++ b/marketplace.html
@@ -44,3 +44,52 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- marketplace.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Student Marketplace</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <header class="marketplace-header">
+    <img src="logo.png" class="small-logo" alt="StudentHub" />
+    <h2>Welcome, Abba!</h2>
+    <span class="user-role">Logged in as: Seller</span>
+  </header>
+
+  <nav class="category-nav">
+    <button class="category-btn active">🎨 Art</button>
+    <button class="category-btn">📚 Books</button>
+    <button class="category-btn">👕 Clothes</button>
+    <button class="category-btn">💻 Skills</button>
+    <button class="category-btn">💡 Ideas</button>
+  </nav>
+
+  <main class="product-grid">
+    <!-- Product 1 -->
+    <div class="product-card">
+      <img src="img/art1.jpg" alt="Art 1" />
+      <h3>Abstract Canvas</h3>
+      <p>৳ 300</p>
+      <span class="seller-name">by: Fatima</span>
+      <button class="btn green">Buy Now</button>
+    </div>
+
+    <!-- Product 2 -->
+    <div class="product-card">
+      <img src="img/book1.jpg" alt="Book 1" />
+      <h3>Math Genius Notes</h3>
+      <p>৳ 150</p>
+      <span class="seller-name">by: Rafi</span>
+      <button class="btn green">Buy Now</button>
+    </div>
+
+    <!-- More product cards here -->
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html>
