--- a/signup.html
+++ b/signup.html
@@ -1,52 +1,107 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>সাইন আপ</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Signup | StudentHub</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
+  <style>
+    .form-section { display: none; margin-top: 20px; }
+    .form-section.active { display: block; }
+    .signup-buttons button {
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: green;
+      border: none;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .signup-buttons button.active {
+      background-color: darkgreen;
+    }
+    form input, form select {
+      display: block;
+      width: 90%;
+      max-width: 400px;
+      margin: 10px 0;
+      padding: 8px;
+      border: 1px solid #444;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <div class="logo">আমাদের লোগো</div>
+    <h1>Signup to StudentHub</h1>
   </header>
 
   <main>
-    <h1>সাইন আপ করুন</h1>
-    <form>
-      <input type="hidden" name="userType" value="buyer"> <!-- ডাইনামিকভাবে পরিবর্তন হবে -->
-      <label for="email">ইমেইল:</label>
-      <input type="email" id="email" name="email" required>
+    <div class="signup-buttons">
+      <button onclick="showForm('buyer')">Buyer</button>
+      <button onclick="showForm('buyerSeller')">Buyer + Seller</button>
+      <button onclick="showForm('entrepreneur')">Entrepreneur</button>
+    </div>
 
-      <label for="name">নাম:</label>
-      <input type="text" id="name" name="name">
+    <!-- Buyer Signup -->
+    <section id="form-buyer" class="form-section">
+      <form id="buyerForm">
+        <h2>Buyer Signup</h2>
+        <input type="text" placeholder="Full Name" required />
+        <input type="email" placeholder="Email" required />
+        <input type="text" placeholder="Student ID" required />
+        <input type="password" placeholder="Password" required />
+        <button type="submit">Signup as Buyer</button>
+      </form>
+    </section>
 
-      <label for="address">ঠিকানা:</label>
-      <input type="text" id="address" name="address">
+    <!-- Buyer + Seller Signup -->
+    <section id="form-buyerSeller" class="form-section">
+      <form id="buyerSellerForm">
+        <h2>Buyer + Seller Signup</h2>
+        <input type="text" placeholder="Full Name" required />
+        <input type="email" placeholder="Email" required />
+        <input type="text" placeholder="Student ID" required />
+        <input type="text" placeholder="Your Skills/Services" required />
+        <input type="password" placeholder="Password" required />
+        <button type="submit">Signup as Buyer + Seller</button>
+      </form>
+    </section>
 
-      <label for="phone">ফোন নাম্বার:</label>
-      <input type="tel" id="phone" name="phone">
-
-      <label for="age">বয়স:</label>
-      <input type="number" id="age" name="age">
-
-      <label for="gender">লিঙ্গ:</label>
-      <select id="gender" name="gender">
-        <option value="male">পুরুষ</option>
-        <option value="female">মহিলা</option>
-        <option value="other">অন্যান্য</option>
-      </select>
-
-      <label for="image">ছবি আপলোড করুন:</label>
-      <input type="file" id="image" name="image">
-
-      <button type="submit">সাইন আপ করুন</button>
-    </form>
+    <!-- Entrepreneur Signup -->
+    <section id="form-entrepreneur" class="form-section">
+      <form id="entrepreneurForm">
+        <h2>Entrepreneur Signup</h2>
+        <input type="text" placeholder="Full Name" required />
+        <input type="email" placeholder="Email" required />
+        <input type="text" placeholder="Student ID" required />
+        <textarea placeholder="Your Idea / Business Plan" required></textarea>
+        <input type="password" placeholder="Password" required />
+        <button type="submit">Signup as Entrepreneur</button>
+      </form>
+    </section>
   </main>
 
-  <footer>
-    <p>© 2025 আমাদের ওয়েবসাইট</p>
-  </footer>
+  <script>
+    function showForm(type) {
+      document.querySelectorAll('.form-section').forEach(section => {
+        section.classList.remove('active');
+      });
+      document.querySelector(`#form-${type}`).classList.add('active');
+
+      document.querySelectorAll('.signup-buttons button').forEach(btn => {
+        btn.classList.remove('active');
+      });
+      event.target.classList.add('active');
+    }
+
+    // Attach validation
+    validateSignupForm('buyerForm');
+    validateSignupForm('buyerSellerForm');
+    validateSignupForm('entrepreneurForm');
+  </script>
+
 </body>
 </html>
