--- a/index.html
+++ b/index.html
@@ -2,38 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Marketplace</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-  <!-- Logo Section (Exactly Like the Image) -->
-  <div class="logo-box">
-    <img src="student-marketplace-logo.png" alt="Student Marketplace Logo">
+  <div class="logo-container">
+    <img src="student-marketplace-logo.png" alt="Student Marketplace Logo" class="main-logo">
   </div>
 
-  <!-- Cards Section -->
-  <div class="container">
-    <div class="card">
-      <h2>Buyer</h2>
-      <p>you can explore creative student products, second-hand items, and unique services. You can ask sellers questions directly, make secure cash payments, and receive delivery in Dhaka. Every purchase helps support student innovation and creativity.</p>
-      <button>SINGUP</button>
-    </div>
-
-    <div class="card">
-      <h2>Buyer & Seller</h2>
-      <p>they can both explore and purchase creative student products, as well as list and sell their own items or ideas. It’s the perfect role for those who want to learn and earn at the same time.</p>
-      <button>SINGUP</button>
-    </div>
-
-    <div class="card">
-      <h2>The world of Entrepreneur</h2>
-      <p>you can register your innovative ideas, update or improve them anytime, and showcase them to a network of students and potential supporters. You’ll also have the chance to attract investors, find collaborators, and turn your vision into reality.</p>
-      <button>SINGUP</button>
-    </div>
+  <!-- Sign up section (যেটা আগেই ছিলো) -->
+  <div class="user-options">
+    <!-- Buyer, Buyer & Seller, Entrepreneur info cards here -->
   </div>
-
 </body>
 </html>
-<img src="student-marketplace-logo.png" alt="Student Marketplace Logo">
