--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Student Marketplace</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="logo-container">
+  <div class="logo-section">
     <img src="student-marketplace-logo.png" alt="Student Marketplace Logo" class="main-logo">
   </div>
 
-  <!-- Sign up section (যেটা আগেই ছিলো) -->
-  <div class="user-options">
-    <!-- Buyer, Buyer & Seller, Entrepreneur info cards here -->
+  <div class="card-container">
+    <!-- Buyer Card -->
+    <div class="info-card">
+      <h2>Buyer</h2>
+      <p>
+        you can explore creative student products, second-hand items, and unique services.<br>
+        You can ask sellers questions directly, make secure cash payments, and receive delivery in Dhaka.<br>
+        Every purchase helps support student innovation and creativity.
+      </p>
+      <button class="signup-btn">SINGUP</button>
+    </div>
+
+    <!-- Buyer & Seller Card -->
+    <div class="info-card">
+      <h2>Buyer & Seller</h2>
+      <p>
+        they can both explore and purchase creative student products, as well as list and sell their own items or ideas.<br>
+        It’s the perfect role for those who want to learn and earn at the same time.
+      </p>
+      <button class="signup-btn">SINGUP</button>
+    </div>
+
+    <!-- Entrepreneur Card -->
+    <div class="info-card">
+      <h2>The word of Entrepreneur</h2>
+      <p>
+        you can register your innovative ideas, update or improve them anytime, and showcase them to a network of students and potential supporters.<br>
+        You’ll also have the chance to attract investors, find collaborators, and turn your vision into reality.
+      </p>
+      <button class="signup-btn">SINGUP</button>
+    </div>
   </div>
 </body>
 </html>
