--- a/index.html
+++ b/index.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Marketplace</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="logo-section">
-    <img src="student-marketplace-logo.png" alt="Student Marketplace Logo" class="main-logo">
+
+  <div class="logo">
+    <img src="student-marketplace-logo.png" alt="Logo">
   </div>
 
   <div class="card-container">
-    <div class="info-card">
+
+    <div class="card">
       <h2>Buyer</h2>
       <p>
-        you can explore creative student products, second-hand items, and unique services.<br>
-        You can ask sellers questions directly, make secure cash payments, and receive delivery in Dhaka.<br>
-        Every purchase helps support student innovation and creativity.
+        you can explore creative <br>
+        student products,<br>
+        second-hand items, <br>
+        and unique services.<br>
+        You can ask sellers <br>
+        questions directly,<br>
+        make secure cash payments,<br>
+        and receive <br>
+        delivery in Dhaka.<br>
+        Every purchase <br>
+        helps support student <br>
+        innovation and creativity.
       </p>
-      <button class="signup-btn">SINGUP</button>
+      <button>SINGUP</button>
     </div>
 
-    <div class="info-card">
+    <div class="card">
       <h2>Buyer & Seller</h2>
       <p>
-        they can both explore and purchase creative student products, as well as list and sell their own items or ideas.<br>
-        It’s the perfect role for those who want to learn and earn at the same time.
+        they can both explore <br>
+        and purchase creative student <br>
+        products, <br>
+        as well as list <br>
+        and sell their <br>
+        own items or ideas.<br>
+        It’s the perfect <br>
+        role for those who want to <br>
+        learn <br>
+        and earn at <br>
+        the same time.
       </p>
-      <button class="signup-btn">SINGUP</button>
+      <button>SINGUP</button>
     </div>
 
-    <div class="info-card">
-      <h2>The word of Entrepreneur</h2>
+    <div class="card">
+      <h2>The word of <br> Entrepreneur</h2>
       <p>
-        you can register your innovative ideas, update or improve them anytime, and showcase them to a network of students and potential supporters.<br>
-        You’ll also have the chance to attract investors, find collaborators, and turn your vision into reality.
+        you can register your <br>
+        innovative ideas, <br>
+        update or improve them <br>
+        anytime,<br>
+        and showcase them to a <br>
+        network of students and <br>
+        potential supporters.<br>
+        You’ll also have the chance to <br>
+        attract investors,<br>
+        find collaborators,<br>
+        and turn your vision into <br>
+        reality.
       </p>
-      <button class="signup-btn">SINGUP</button>
+      <button>SINGUP</button>
     </div>
+
   </div>
+
 </body>
 </html>
