--- a/index.html
+++ b/index.html
@@ -1,139 +1,109 @@
-<!-- File Name: index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Marketplace</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Intro Interface</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: sans-serif;
     }
     body {
       background-color: #000;
       color: #fff;
-      padding: 20px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      align-items: flex-start;
+      padding: 0;
     }
-    .logo-container {
-      margin-bottom: 20px;
-    }
-    .logo {
-      max-width: 300px;
+    .header {
       width: 100%;
+      height: auto;
     }
-    .card-container {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
+    .header img {
       width: 100%;
-      max-width: 400px;
+      height: auto;
+      display: block;
     }
-    .card {
-      background-color: #111;
-      border: 1px solid #444;
+    .content {
       padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,255,0,0.3);
+      width: 100%;
+      max-width: 700px;
     }
-    .card h2 {
-      font-size: 20px;
+    .section {
+      margin-bottom: 30px;
+    }
+    .section h2 {
+      font-size: 24px;
+      text-align: left;
       margin-bottom: 10px;
-      color: #00ff00;
-      line-height: 1.3;
     }
-    .card p {
-      font-size: 14px;
-      line-height: 1.6;
-      margin-bottom: 15px;
+    .section p {
+      font-size: 18px;
+      text-align: left;
+      line-height: 1.5;
     }
-    .card button {
-      background-color: #00ff00;
-      color: #000;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 30px;
+    }
+    .buttons button {
+      padding: 15px;
+      font-size: 18px;
       width: 100%;
+      background-color: #1db954;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      cursor: pointer;
     }
-    @media (min-width: 768px) {
-      .card-container {
-        flex-direction: row;
-        justify-content: center;
-        max-width: 1200px;
+    @media (max-width: 768px) {
+      .content {
+        padding: 15px;
       }
-      .card {
-        width: 300px;
+      .section h2 {
+        font-size: 20px;
+      }
+      .section p {
+        font-size: 16px;
+      }
+      .buttons button {
+        font-size: 16px;
+        padding: 12px;
       }
     }
   </style>
 </head>
 <body>
-  <div class="logo-container">
-    <img src="https://i.ibb.co/Q7Ymc2f/logo.png" alt="Logo" class="logo">
+  <div class="header">
+    <img src="header-design.png" alt="Header Design">
   </div>
 
-  <div class="card-container">
-    <div class="card">
-      <h2>Buyer</h2>
-      <p>
-        you can explore creative<br>
-        student products,<br>
-        second-hand items,<br>
-        and unique services.<br>
-        You can ask sellers<br>
-        questions directly,<br>
-        make secure cash payments,<br>
-        and receive<br>
-        delivery in Dhaka.<br>
-        Every purchase<br>
-        helps support student<br>
-        innovation and creativity.
-      </p>
-      <button>SINGUP</button>
+  <div class="content">
+    <div class="section">
+      <h2>WHO AM I ?</h2>
+      <p>I am an AI-powered digital assistant, trained by OpenAI to provide answers, support, and creative help.</p>
     </div>
 
-    <div class="card">
-      <h2>Buyer & Seller</h2>
-      <p>
-        they can both explore<br>
-        and purchase creative student<br>
-        products,<br>
-        as well as list<br>
-        and sell their<br>
-        own items or ideas.<br>
-        It's the perfect<br>
-        role for those who want to<br>
-        learn<br>
-        and earn at<br>
-        the same time.
-      </p>
-      <button>SINGUP</button>
+    <div class="section">
+      <h2>WHAT CAN I DO ?</h2>
+      <p>I can assist with programming, design ideas, self-improvement tips, motivation, and more—just like your personal assistant!</p>
     </div>
 
-    <div class="card">
-      <h2>The word of<br>Entrepreneur</h2>
-      <p>
-        you can register your<br>
-        innovative ideas,<br>
-        update or improve them<br>
-        anytime,<br>
-        and showcase them to a<br>
-        network of students and<br>
-        potential supporters.<br>
-        You'll also have the chance to<br>
-        attract investors,<br>
-        find collaborators,<br>
-        and turn your vision into<br>
-        reality.
-      </p>
-      <button>SINGUP</button>
+    <div class="section">
+      <h2>WHY CHOOSE ME ?</h2>
+      <p>Because I’m fast, reliable, constantly improving, and ready 24/7 to support your ideas and growth!</p>
+    </div>
+
+    <div class="buttons">
+      <button>Start Your Journey</button>
+      <button>Connect With Community</button>
+      <button>Explore More</button>
     </div>
   </div>
 </body>
