--- a/index.html
+++ b/index.html
@@ -2,105 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Student Interface</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      padding: 0;
-      margin: 0;
-    }
-
-    .container {
-      max-width: 100vw;
-      min-height: 100vh;
-      padding: 10px 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .top-design {
-      width: 100%;
-      height: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .top-design img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .card {
-      border: 2px solid #00ff00;
-      padding: 20px;
-      width: 100%;
-      max-width: 700px;
-      align-self: flex-start;
-    }
-
-    .card h2 {
-      color: #00ff00;
-      font-size: 1.4rem;
-      margin-bottom: 10px;
-      text-align: left;
-    }
-
-    .card p {
-      font-size: 1rem;
-      margin-bottom: 10px;
-      text-align: left;
-    }
-
-    .card button {
-      padding: 10px 20px;
-      background-color: #00ff00;
-      border: none;
-      color: black;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    @media (min-width: 768px) {
-      .container {
-        align-items: flex-start;
-        padding: 50px 100px;
-      }
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Welcome Page</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <div class="top-design">
-      <img src="https://student-marketplace.netlify.app/logo-design.png" alt="Top Design" />
-    </div>
+    <img src="header-design.png" alt="Header Design" class="header-img" />
 
-    <div class="card">
-      <h2>স্বাগতম STUDENT MARKETPLACE</h2>
-      <p>এটি শুধুমাত্র ঢাকা শহরের ছাত্রছাত্রীদের জন্য একটি সম্পূর্ণ ফ্রি প্ল্যাটফর্ম।</p>
-      <button>SIGN UP</button>
-    </div>
+    <div class="text-section">
+      <h1>WELCOME TO STUDENT MARKETPLACE</h1>
+      <p>Buy • Sell • Share Ideas</p>
 
-    <div class="card">
-      <h2>তোমার জিনিস বিক্রি করো</h2>
-      <p>পুরোনো বা নতুন যেকোনো প্রোডাক্ট বিক্রি করো খুব সহজে, একদম নিরাপদে।</p>
-      <button>SELL NOW</button>
-    </div>
-
-    <div class="card">
-      <h2>তোমার আইডিয়া শেয়ার করো</h2>
-      <p>তোমার ইউনিক আইডিয়াগুলো পোস্ট করো এবং বিনিয়োগকারী খুঁজে পাওয়ার সুযোগ নাও।</p>
-      <button>SHARE IDEA</button>
+      <button class="main-btn green">Continue as Buyer</button>
+      <button class="main-btn red">Continue as Seller</button>
+      <button class="main-btn blue">Share Idea / Service</button>
     </div>
   </div>
 </body>
