--- a/index.html
+++ b/index.html
@@ -1,23 +1,128 @@
+import zipfile
+import os
+
+# Create a directory for the website files
+project_dir = "/mnt/data/website_header_interface"
+os.makedirs(project_dir, exist_ok=True)
+
+# Define file contents based on the exact design from the image provided
+
+# index.html
+index_html = """
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Student Welcome Page</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <img src="header-design.png" alt="Header Design" class="header-img" />
-
-    <div class="text-section">
-      <h1>WELCOME TO STUDENT MARKETPLACE</h1>
-      <p>Buy • Sell • Share Ideas</p>
-
-      <button class="main-btn green">Continue as Buyer</button>
-      <button class="main-btn red">Continue as Seller</button>
-      <button class="main-btn blue">Share Idea / Service</button>
+    <div class="content">
+      <p class="text">Welcome to Student Marketplace</p>
+      <p class="text">You can Buy, Sell and Share Creative Items</p>
+      <p class="text">Start your journey with us</p>
+      <div class="buttons">
+        <button class="btn">Sign up as Buyer</button>
+        <button class="btn">Sign up as Seller</button>
+        <button class="btn">Continue as Guest</button>
+      </div>
     </div>
   </div>
 </body>
 </html>
+"""
+
+# style.css
+style_css = """
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+  background-color: black;
+  color: white;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.header-img {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+}
+
+.content {
+  margin-top: 20px;
+  padding-left: 10px;
+}
+
+.text {
+  margin: 10px 0;
+  font-size: 1.2rem;
+  text-align: left;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
+}
+
+.btn {
+  background-color: green;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px 0;
+  font-size: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 200px;
+  text-align: left;
+}
+
+@media (max-width: 768px) {
+  .text {
+    font-size: 1rem;
+  }
+  .btn {
+    width: 100%;
+  }
+}
+"""
+
+# header image placeholder (user will replace it with actual image)
+image_path = "/mnt/data/website_header_interface/header-design.png"
+
+# Save files
+with open(os.path.join(project_dir, "index.html"), "w") as f:
+    f.write(index_html.strip())
+
+with open(os.path.join(project_dir, "style.css"), "w") as f:
+    f.write(style_css.strip())
+
+# Create a ZIP of the project
+zip_path = "/mnt/data/student_welcome_page.zip"
+with zipfile.ZipFile(zip_path, "w") as zipf:
+    zipf.write(os.path.join(project_dir, "index.html"), "index.html")
+    zipf.write(os.path.join(project_dir, "style.css"), "style.css")
+    if os.path.exists(image_path):
+        zipf.write(image_path, "header-design.png")
+
+zip_path
